# cpp-multithread-data-processor

./: CMakeLists.txt  README.md  main.code-workspace  vcpkg.json
MulithreadDataProcessor/: CMakeLists.txt  EventAtomic.ixx  ParallelProcessor.ixx  Queue.ixx  TaskPool.ixx  ThreadPool.ixx  main.ixx
MulithreadDataProcessorSTL/: MulithreadDataProcessor.sln
MulithreadDataProcessorSTL/MulithreadDataProcessor/: Event.cpp  Event.h  EventAtomic.cpp  EventAtomic.h  Function.h  FunctionTraits.h  MulithreadDataProcessor.vcxproj  MulithreadDataProcessor.vcxproj.filters  PFunc.h  ParallelProcessor.h  Queue.h  ScopedThread.h  TaskPool.cpp  TaskPool.h  ThreadPool.h  iostreamUtils.h  main.cpp
bench_utils/: BenchUtils.ixx  CMakeLists.txt
data_processor/: CMakeLists.txt  main.ixx
lib/: CMakeLists.txt  Event.ixx  Function.ixx  FunctionTraits.ixx  ParallelProcessor.ixx  ScopedThread.ixx
tests/: CMakeLists.txt  ParallelProcessorTests.ixx  QueueTests.ixx  main.ixx  test_mod.ixx
